--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 :root{
+
     background-color: aqua;
-    color: black;
-    
+
+    color: rgb(0, 0, 0);
 }
 body{
     background-color: var(cor-fundo);
-    color:var(cor-base
-    )
+    color:var(cor-base)
+  /* root é caixinha de variaveis */ 
 }
