--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 body{
     background-color: var(cor-fundo);
     color:var(cor-base)
-  /* root é caixinha de variaveis */ 
+  /* root é caixinha de variaveis :(*/ 
 }
  
 header{
