--- a/style.css
+++ b/style.css
@@ -9,19 +9,21 @@ body{
     color:var(cor-base)
   /* root é caixinha de variaveis :(*/ 
 
-
 }
- 
+img{
+    width: 20%
+    ;
+}
+
 header{
     display: flex;
     align-content: stretch;
     flex-direction: row;
     align-items: flex-end
 
-    /*img-intro{
+.img-intro{
         width: 20%
     }
-*/
 .intro{
     display: flex;
 }
