--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body{
 
 }
 img{
-    width: 20%
+    width: 20
     ;
 }
 
@@ -22,10 +22,13 @@ header{
     align-items: flex-end
 
 .img-intro{
-        width: 50%
+        width: 50
     }
 .intro{
     display: flex;
 }
    
+}
+.introdução{
+    display: flex;
 }
