--- a/style.css
+++ b/style.css
@@ -35,7 +35,9 @@ header{
 
 .equipe{
     display: grid;
-    grid-template-columns: 50% 50%
+    grid-template-columns: 50% 50%;
+    text-align: center;
+    
 }
 
     .foto-equipe{
