--- a/style.css
+++ b/style.css
@@ -17,9 +17,10 @@ img{
 
 header{
     display: flex;
-    align-content: stretch;
     flex-direction: row;
-    align-items: flex-end
+    flex-wrap: wrap;
+    align-content: stretch;
+    justify-content: center;
 }
 
  .img-intro{
