--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ header{
     display: flex;
 }
 
-.equipe{
+#equipe{
     display: grid;
     grid-template-columns: 50% 50%;
     text-align: center;
