--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Kumar+One&display=swap');
+</style>
+
 :root{
 
     background-color: rgb(53, 52, 52);
@@ -8,6 +11,9 @@ body{
     background-color: var(cor-fundo);
     color:var(cor-base)
   /* root é caixinha de variaveis :(*/ 
+  font-family: "Kumar One", serif;
+  font-weight: 400;
+  font-style: normal;
   
 
 }
