--- a/style.css
+++ b/style.css
@@ -1,15 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Kumar+One&display=swap');
-</style>
 
 :root{
-
-    background-color: rgb(53, 52, 52);
-
-    color: rgb(255, 255, 255);
+--cor-fundo: #3aabec;
+--cor-base:#fdfdfd ;
 }
 body{
-    background-color: var(cor-fundo);
-    color:var(cor-base)
+    background-color: var(--cor-fundo);
+    color:var();
   /* root é caixinha de variaveis :(*/ 
   font-family: "Kumar One", serif;
   font-weight: 400;
