--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Kumar+One&display=swap');
 
 :root{
---cor-fundo: #3aabec;
+--cor-fundo: #80badb;
 --cor-base:#fdfdfd ;
 }
 body{
