--- a/style.css
+++ b/style.css
@@ -31,7 +31,9 @@ header{
         width: 10%
     }
 .intro{
-    margin: 0 auto;
+    margin: 0 30%;
+    display: flex;
+    flex-direction: column;
 }
    
 .introdução{
